--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -11,6 +11,10 @@
     <param name="onload" value="true"/>
   </feature>
 
+  <feature name="CordovaStripe">
+    <param name="android-package" value="com.zyramedia.cordova.stripe.CordovaStripe"/>
+  </feature>
+
   <feature name="YoutubeVideoPlayer">
     <param name="android-package" value="com.bunkerpalace.cordova.YoutubeVideoPlayer"/>
   </feature>
